--- a/src/style.css
+++ b/src/style.css
@@ -3,8 +3,10 @@
   line-height: 1.5;
   font-weight: 400;
 
+  font-size: 14px;
+
   color-scheme: light dark;
-  color: rgba(11, 11, 11, 0.87);
+  color: rgb(var(--v-theme-darken3));
   background-color: rgb(var(--v-theme-secondary));
 
   font-synthesis: none;
@@ -35,4 +37,15 @@
 
 .letter-spacing-0 {
   letter-spacing: 0 !important;
+}
+
+.border-secondary {
+  border-width: 2px !important;
+  border-color: rgb(var(--v-theme-secondary)) !important;
+  border-style: solid !important;
+}
+
+.outline {
+  outline: 1px solid rgb(var(--v-theme-darken1));
+  opacity: 0.2;
 }
