--- a/src/style.css
+++ b/src/style.css
@@ -49,3 +49,15 @@
   outline: 1px solid rgb(var(--v-theme-darken1));
   opacity: 0.2;
 }
+
+.w-sm-60 {
+  @media screen and (min-width: 599px) {
+    width: 60% !important;
+  }
+}
+
+.w-sm-40 {
+  @media screen and (min-width: 599px) {
+    width: 40% !important;
+  }
+}
